More style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,300,600,700,800|Vibur|Monoton|Gentium+Basic:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <section class="site-header">
