--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,7 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
           <nav>
-            <a href="{{ site.baseurl }}/"><i class="fa fa-pencil"></i> Blog</a>
-            <a href="{{ site.baseurl }}/about"><i class="fa fa-user"></i> About</a>
+            <a href="{{ site.baseurl }}/"><i class="fa fa-pencil"></i> Home</a>
           </nav>
         </header>
       </div>
