--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
     </section>
     <section id="main" role="main" class="container">
         <section class="content">
+            {% if post.title %}
+              <h2>{{ post.title }}</h2>
+            {% endif %}
             {{ content }}
         </section>
         <aside>
