--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,7 @@ $teal--light: #66fcf1;
 
 html, body {
   background-color: $black;
-  color: $grey--light;
+  color: $gray--light;
   font-family: $font__sans-serif;
 }
 
